Revert "remove duplicate reimbursement fields"
This reverts commit 4c2d17934930039bb29cd996e3c332dbf7704367.

--- a/templates/application_review.html
+++ b/templates/application_review.html
@@ -45,6 +45,7 @@
                     <th>Can pay</th>
                     <th>City</th>
                     <th>State/Country</th>
+                    <th>Reimbursement</th>
                     <th>Mentor</th>
                 </tr>
                 </thead>
@@ -87,6 +88,7 @@
                         <td>{{result.can_pay}}</td>
                         <td>{{result.from_city}}</td>
                         <td>{{result.from_state}}</td>
+                        <td>{{result.reimbursement}}</td>
                         <td>{{result.mentoring}}</td>
                     </tr>
                 {% endfor %}
