--- a/static/stylesheets/dashboard.css
+++ b/static/stylesheets/dashboard.css
@@ -13,3 +13,21 @@
 .body-info h3 {
     color: black;
 }
+
+.rounded-box {
+    padding: 3px;
+    border-radius: 5px 5px 5px 5px;
+}
+
+.accept {
+    background-color: lawngreen;
+}
+
+.waitlist {
+    background-color: yellow;
+}
+
+.decline {
+    background-color: dimgray;
+    color: white;
+}
