--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -13,8 +13,7 @@
     <div class="body-info" id="main-message">
         {% if request.user and request.user.groups.filter(name='application_reader').exists() %}
             <h2>Looks like you're an application reader!</h2>
-            <a href="{{url_for('mhacks-applicationSearch')}}"><button type="button">Read Hacker Apps</button></a>
-            <a href="{{url_for('mhacks-applicationSearch')}}"><button type="button">Read Mentor Apps</button></a>
+            <a href="{{url_for('mhacks-applicationSearch')}}"><button type="button">Read Apps</button></a>
             <br>
             <hr>
         {% endif %}
