--- a/templates/application_search.html
+++ b/templates/application_search.html
@@ -1,10 +1,13 @@
 {% extends 'application_search_form.html' %}
 
 {% block form_headers %}
-<link rel="stylesheet" media="all" href="{{ static('stylesheets/application.css') }}">
+    <link rel="stylesheet" media="all" href="{{ static('stylesheets/application.css') }}">
 {% endblock %}
 
-{% block form_action %}{{url_for('mhacks-applicationReview')}}{% endblock %}
+{% block form_action %}
+    <input type="submit" name="hacker" value="Search Hacker Apps" />
+    <input type="submit" name="mentor" value="Search Mentor Apps" />
+{% endblock %}
 
 {% block form_enctype %}enctype="multipart/form-data"{% endblock %}
 
