placeholder for reg

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -37,8 +37,9 @@
                 {% if application.decision == 'Accept' %}
                     <h2>Application Status: <span class="rounded-box accept">ACCEPTED</span></h2>
                     <p>You’re awesome. We’re awesome. Head over to our <a href="https://www.facebook.com/events/1197509966946089/">Facebook event page</a> and join the community!</p>
-                    <p>Hit the button below to register and make sure you check out our <span class="fake-link" id="bus-routes-link">bus routes</span>! 🎉</p>
-                    <a href="{{ url_for('mhacks-registration') }}"><button type="button">Register</button></a>
+                    <p>Registration isn’t open yet, but check back here this week for the form, bus routes, and your Pre-Event Checklist 🎉</p>
+{#                    <p>Hit the button below to register and make sure you check out our <span class="fake-link" id="bus-routes-link">bus routes</span>! 🎉</p>#}
+{#                    <a href="{{ url_for('mhacks-registration') }}"><button type="button">Register</button></a>#}
 
                     <div id="bus-routes">
                         <br>
